# WEIGHBRIDGE-AUTOMATION-SYSTEM

./: Architecture design  CONTRIBUTING.md  CREATE TABLE vehicle_entries (.sql  ESP32 installation Code  README.md  Requirement Gathering
vehicle_webbridge/: CMakeLists.txt  MySQLHandler.cpp  SerialReader.cpp  main.cpp
vehicle_weighbridge/: CMakeLists.txt  CSVHandler.cpp  CSVHandler.h  CameraHandler.cpp  CameraHandler.h  Config.json  DataStorage.h  ExcelHandler.cpp  ExcelHandler.h  MySQLHandler.cpp  MySQLHandler.h  SerialReader.cpp  SerialReader.h  main.cpp
